@@ -12,6 +12,7 @@ All changes regarding the Forge version of the mod should be documented here.
     - compatibility level JAVA_8 -> JAVA_17
     - removed refmap key
 - moved icon.png from assets to assets/create_hypertube
+- removed commonSetup, as it's a forge-only thing
 
 ## Additions
 - fabric.mod.json
